project(Scotty3D)

find_package(SDL2)

add_executable(${PROJECT_NAME})
target_include_directories(
  ${PROJECT_NAME} PRIVATE 
  ${CMAKE_CURRENT_SOURCE_DIR}/deps
  ${CMAKE_CURRENT_SOURCE_DIR}/deps/nfd
  ${CMAKE_CURRENT_SOURCE_DIR}/deps/imgui
  ${CMAKE_CURRENT_SOURCE_DIR}/deps/sejp
  ${CMAKE_CURRENT_SOURCE_DIR}/deps/glad
  ${CMAKE_CURRENT_SOURCE_DIR}/deps/sf_libs
  ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(
  ${PROJECT_NAME} PRIVATE 
  SDL2::SDL2main
  $<$<PLATFORM_ID:Windows>:Shcore>
)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
  target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32_LEAN_AND_MEAN _CRT_SECURE_NO_WARNINGS)
  # target_compile_options(${PROJECT_NAME} PRIVATE /permissive-)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
endif()
target_sources(
  ${PROJECT_NAME} PRIVATE
  # depdencies
  ## glad
  "deps/glad/glad.cpp"
  "deps/glad/glad.h"
  "deps/glad/khrplatform.h"
  ## imgui
  "deps/imgui/imconfig.h"
  "deps/imgui/imgui_custom.h"
  "deps/imgui/imgui_demo.cpp"
  "deps/imgui/imgui_draw.cpp"
  "deps/imgui/imgui_impl_opengl3_loader.h"
  "deps/imgui/imgui_impl_opengl3.cpp"
  "deps/imgui/imgui_impl_opengl3.h"
  "deps/imgui/imgui_impl_sdl.cpp"
  "deps/imgui/imgui_impl_sdl.h"
  "deps/imgui/imgui_internal.h"
  "deps/imgui/imgui_tables.cpp"
  "deps/imgui/imgui_widgets.cpp"
  "deps/imgui/imgui.cpp"
  "deps/imgui/imgui.h"
  "deps/imgui/imstb_rectpack.h"
  "deps/imgui/imstb_textedit.h"
  "deps/imgui/imstb_truetype.h"
  ## nfd
  $<$<PLATFORM_ID:Darwin>:"deps/nfd/nfd_cocoa.m">
  $<$<PLATFORM_ID:Linux>:"deps/nfd/nfd_gtk.c">
  "deps/nfd/nfd_common.c"
  "deps/nfd/nfd_common.h"
  "deps/nfd/nfd_win.cpp"
  "deps/nfd/nfd.h"
  ## sejp
  "deps/sejp/sejp.cpp"
  "deps/sejp/sejp.hpp"
  ## header-only libs
  "deps/sf_libs/CLI11.hpp"
  "deps/sf_libs/sf_libs.cpp"
  "deps/sf_libs/stb_image_write.h"
  "deps/sf_libs/stb_image.h"
  "deps/sf_libs/stb_perlin.h"
  "deps/sf_libs/tinyexr.h"
  # geometry
  "geometry/halfedge-global.cpp"
  "geometry/halfedge-local.cpp"
  "geometry/halfedge-utility.cpp"
  "geometry/halfedge.h"
  "geometry/indexed.cpp"
  "geometry/indexed.h"
  "geometry/meshedit.cpp"
  "geometry/spline.cpp"
  "geometry/spline.h"
  "geometry/util.cpp"
  "geometry/util.h"
  # gui
  "gui/animate.cpp"
  "gui/animate.h"
  "gui/manager.cpp"
  "gui/manager.h"
  "gui/model.cpp"
  "gui/model.h"
  "gui/modifiers.h"
  "gui/render.cpp"
  "gui/render.h"
  "gui/rig.cpp"
  "gui/rig.h"
  "gui/simulate.cpp"
  "gui/simulate.h"
  "gui/widgets.cpp"
  "gui/widgets.h"
  # core
  "lib/bbox.h"
  "lib/line.h"
  "lib/log.h"
  "lib/mat4.h"
  "lib/mathlib.h"
  "lib/plane.h"
  "lib/quat.h"
  "lib/ray.h"
  "lib/spectrum.h"
  "lib/vec2.h"
  "lib/vec3.h"
  "lib/vec4.h"
  # pathtracer
  "pathtracer/aggregate.h"
  "pathtracer/aperture_shape.cpp"
  "pathtracer/aperture_shape.h"
  "pathtracer/bvh.cpp"
  "pathtracer/bvh.h"
  "pathtracer/instance.h"
  "pathtracer/list.h"
  "pathtracer/pathtracer.cpp"
  "pathtracer/pathtracer.h"
  "pathtracer/samplers.cpp"
  "pathtracer/samplers.h"
  "pathtracer/trace.h"
  "pathtracer/tri_mesh.cpp"
  "pathtracer/tri_mesh.h"
  # platform
  "platform/font.dat"
  "platform/gl.cpp"
  "platform/gl.h"
  "platform/platform.cpp"
  "platform/platform.h"
  "platform/renderer.cpp"
  "platform/renderer.h"
  # rasterizer
  "rasterizer/framebuffer.cpp"
  "rasterizer/framebuffer.h"
  "rasterizer/pipeline.cpp"
  "rasterizer/pipeline.h"
  "rasterizer/programs.h"
  "rasterizer/rasterizer.cpp"
  "rasterizer/rasterizer.h"
  "rasterizer/sample_pattern.cpp"
  "rasterizer/sample_pattern.h"
  # scene
  "scene/animator.cpp"
  "scene/animator.h"
  "scene/camera.cpp"
  "scene/camera.h"
  "scene/delta_light.cpp"
  "scene/delta_light.h"
  "scene/env_light.cpp"
  "scene/env_light.h"
  "scene/instance.h"
  "scene/introspect.h"
  "scene/io.cpp"
  "scene/io.h"
  "scene/load-save-json.cpp"
  "scene/load-save.cpp"
  "scene/material.cpp"
  "scene/material.h"
  "scene/particles.cpp"
  "scene/particles.h"
  "scene/scene-step.cpp"
  "scene/scene.cpp"
  "scene/scene.h"
  "scene/shape.cpp"
  "scene/shape.h"
  "scene/skeleton.cpp"
  "scene/skeleton.h"
  "scene/texture.cpp"
  "scene/texture.h"
  "scene/transform.cpp"
  "scene/transform.h"
  "scene/undo.cpp"
  "scene/undo.h"
  # util
  "util/hdr_image.cpp"
  "util/hdr_image.h"
  "util/rand.cpp"
  "util/rand.h"
  "util/thread_pool.cpp"
  "util/thread_pool.h"
  "util/timer.cpp"
  "util/timer.h"
  "util/to_json.cpp"
  "util/to_json.h"
  "util/viewer.cpp"
  "util/viewer.h"
  # app
  "app.cpp"
  "app.h"
  "main.cpp"
  "test.cpp"
  "test.h"
  # tests
  "tests/a0/test.a0.task2.example.cpp"
  "tests/a0/test.a0.task2.problems.cpp"
  "tests/a1/test.a1.task1.cpp"
  "tests/a1/test.a1.task2.cpp"
  "tests/a1/test.a1.task3.raster.cpp"
  "tests/a1/test.a1.task4.cpp"
  "tests/a1/test.a1.task5.cpp"
  "tests/a1/test.a1.task6.cpp"
  "tests/a1/test.a1.task7.cpp"
  "tests/a2/test.a2.g1.cpp"
  "tests/a2/test.a2.g2.cpp"
  "tests/a2/test.a2.g3.cpp"
  "tests/a2/test.a2.global.mix.cpp"
  "tests/a2/test.a2.go1.cpp"
  "tests/a2/test.a2.go2.cpp"
  "tests/a2/test.a2.go3.cpp"
  "tests/a2/test.a2.l1.cpp"
  "tests/a2/test.a2.l2.cpp"
  "tests/a2/test.a2.l3.cpp"
  "tests/a2/test.a2.l4.cpp"
  "tests/a2/test.a2.local.mix.cpp"
  "tests/a2/test.a2.lx1.cpp"
  "tests/a2/test.a2.lx2.cpp"
  "tests/a2/test.a2.lx3.cpp"
  "tests/a2/test.a2.lx4.cpp"
  "tests/a2/test.a2.lx5.cpp"
  "tests/a2/test.a2.lx6.cpp"
  "tests/a2/test.a2.lx7.cpp"
  "tests/a2/test.a2.lx8.cpp"
  "tests/a3/test.a3.task1.sample_ray.cpp"
  "tests/a3/test.a3.task2.sphere.hit.cpp"
  "tests/a3/test.a3.task2.triangle.hit.cpp"
  "tests/a3/test.a3.task3.bbox.hit.cpp"
  "tests/a3/test.a3.task3.bbox.triangle.cpp"
  "tests/a3/test.a3.task3.bvh.build.cpp"
  "tests/a3/test.a3.task3.bvh.fuzz.cpp"
  "tests/a3/test.a3.task3.bvh.hit.cpp"
  "tests/a3/test.a3.task4.bsdf.lambertian.cpp"
  "tests/a3/test.a3.task5.bsdf.glass.cpp"
  "tests/a3/test.a3.task5.bsdf.mirror.cpp"
  "tests/a3/test.a3.task5.bsdf.refract.cpp"
  "tests/a3/test.a3.task7.env_light.map.cpp"
  "tests/a4/test.a4.task1.spline.cpp"
  "tests/a4/test.a4.task2.gradient.cpp"
  "tests/a4/test.a4.task2.pose.bind.cpp"
  "tests/a4/test.a4.task2.pose.current.cpp"
  "tests/a4/test.a4.task2.step_ik.cpp"
  "tests/a4/test.a4.task3.closest_on_line_segment.cpp"
  "tests/a4/test.a4.task3.skin.cpp"
  "tests/a4/test.a4.task4.particles.cpp"
)